--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,13 +3,15 @@ name: CI
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ master ]
+  #push:
+   # branches: [ main ]
+  #pull_request:
+   # branches: [ master ]
 
   # Allows you to run this workflow manually from the Actions tab
  # workflow_dispatch:
+ schedule:
+  - cron: "2 * * * *"
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
