--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,6 +2,8 @@ name: CI
 
 # Controls when the workflow will run
 on:
+ schedule:
+  - cron: '*/2 * * * *'
   # Triggers the workflow on push or pull request events but only for the master branch
   #push:
    # branches: [ main ]
@@ -10,8 +12,7 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
  # workflow_dispatch:
- schedule:
-  - cron: "*/2 * * * *"
+
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
