--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,13 +5,13 @@ on:
  #schedule:
   #- cron: '*/2 * * * *'
   # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches: [ main ]
+  #push:
+    #branches: [ main ]
   #pull_request:
    # branches: [ master ]
 
   # Allows you to run this workflow manually from the Actions tab
- # workflow_dispatch:
+  workflow_dispatch:
 
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
