--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,3 +36,6 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
           nslookup www.google.com 
+      # Runs a single command using the runners shell
+      - name: Run a shell script
+        run: ./shellscript.sh
