--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,8 +2,9 @@ name: CI
 
 # Controls when the workflow will run
 on:
- #schedule:
-  #- cron: '*/2 * * * *'
+  # Run the workflow job 
+ schedule:
+   - cron: '*/2 * * * *'
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ main ]
@@ -16,6 +17,7 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  scheduled-job:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
