--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,7 +18,7 @@ on:
 jobs:
   #scheduled-job:
   # This workflow contains a single job called "build"
-  build:
+  job1:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -29,7 +29,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world this is first job run!
+        run: echo Hello, world this is job1 run!
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
@@ -40,7 +40,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a shell script
         run: sh ./shellscript.sh
-  build1:
+  job2:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -51,5 +51,5 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a second job one-line script
-        run: echo Hello, world this is second job run!
+        run: echo Hello, world this is job2 run!
 
