--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,8 +2,9 @@ name: Demo
 
 # Controls when the workflow will run
 on:
+    branches: [ main ]
   schedule:
-    - cron: '14 07 * * *'
+    - cron: '*/6 * * * *'
   # Triggers the workflow on push or pull request events but only for the master branch
   #push:
    # branches: [ main ]
