--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,7 +2,7 @@ name: Demo
 
 # Controls when the workflow will run
 on:
-    branches: [ main ]
+   # branches: [ main ]
   schedule:
     - cron: '*/6 * * * *'
   # Triggers the workflow on push or pull request events but only for the master branch
