--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,7 +4,7 @@ name: Demo
 on:
    # branches: [ main ]
   schedule:
-    - cron: '*/6 * * * *'
+    - cron: "*/6 * * * *"
   # Triggers the workflow on push or pull request events but only for the master branch
   #push:
    # branches: [ main ]
